add missing images

--- a/gallery.html
+++ b/gallery.html
@@ -32,15 +32,15 @@
         <div class="grid grid-4x4">
           <!-- 16 royalty-free images with descriptive alt text -->
           <img
-            src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?q=80&w=800&auto=format&fit=crop"
+            src="images/Golden-retriever-after-a-groom.jpg"
             alt="Golden retriever after a groom"
           />
           <img
-            src="https://images.unsplash.com/photo-1534361960057-19889db9621e?q=80&w=800&auto=format&fit=crop"
+            src="images/small-dog-with-a-tidy-haircut.jpg"
             alt="Small dog with a tidy haircut"
           />
           <img
-            src="https://images.unsplash.com/photo-1558944351-c0bcb43c4b21?q=80&w=800&auto=format&fit=crop"
+            src="images/poodle-freshly-styled.jpg"
             alt="Poodle freshly styled"
           />
           <img
@@ -48,7 +48,7 @@
             alt="Happy terrier with a bandana"
           />
           <img
-            src="https://images.unsplash.com/photo-1548191265-cc70d3d45ba1?q=80&w=800&auto=format&fit=crop"
+            src="images/Corgi smiling post-groom.jpg"
             alt="Corgi smiling post-groom"
           />
           <img
@@ -60,39 +60,38 @@
             alt="Shih Tzu with trimmed coat"
           />
           <img
-            src="https://images.unsplash.com/photo-1548192746-4a9a98b1d86a?q=80&w=800&auto=format&fit=crop"
+            src="images/bulldog-resting-at-saling.jpg"
             alt="Bulldog relaxing at the salon"
           />
           <img
-            src="https://images.unsplash.com/photo-1568572933382-74d440642117?q=80&w=800&auto=format&fit=crop"
-            alt="Schnauzer with neat beard"
-          />
+          src="https://images.unsplash.com/photo-1568572933382-74d440642117?q=80&w=800&auto=format&fit=crop
+          alt="Schnauzer with neat beard" />
           <img
             src="https://images.unsplash.com/photo-1525253086316-d0c936c814f8?q=80&w=800&auto=format&fit=crop"
             alt="Fluffy dog combed and cleaned"
           />
           <img
-            src="https://images.unsplash.com/photo-1537151625747-768eb6cf92b6?q=80&w=800&auto=format&fit=crop"
+            src="images/Spaniel with shiny coat.jpg"
             alt="Spaniel with shiny coat"
           />
           <img
-            src="https://images.unsplash.com/photo-1546975490-6a99f944b15f?q=80&w=800&auto=format&fit=crop"
+            src="images/Chihuahua with tidy nails.jpg"
             alt="Chihuahua with tidy nails"
           />
           <img
-            src="https://images.unsplash.com/photo-1546975490-972f66f86daa?q=80&w=800&auto=format&fit=crop"
+            src="images/Shepherd with brushed coat.jpg"
             alt="Shepherd with brushed coat"
           />
           <img
-            src="https://images.unsplash.com/photo-1543466835-7c2f5e19c5f9?q=80&w=800&auto=format&fit=crop"
+            src="images/Malamute after deshedding.jpg"
             alt="Malamute after deshedding"
           />
           <img
-            src="https://images.unsplash.com/photo-1571772805064-2075a2a7d3b5?q=80&w=800&auto=format&fit=crop"
+            src="images/Husky with neat trim.jpg"
             alt="Husky with neat trim"
           />
           <img
-            src="https://images.unsplash.com/photo-1518806118471-f28b20a1d79d?q=80&w=800&auto=format&fit=crop"
+            src="images/Labrador with bandana.jpg"
             alt="Labrador with bandana"
           />
         </div>
